# The-Seidel-method

./: .gitignore  CMakeLists.txt  Makefile  README.md
apps/: main.cpp
include/: SeidelSolver.h
src/: SeidelSolver.cpp
tests/: unit_test.cpp
tests/test_case/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt  test8.txt
